installing compactible version of akta

--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "@angular/router": "^16.0.0",
     "@ng-bootstrap/ng-bootstrap": "^15.0.0",
     "@okta/okta-angular": "^6.4.0",
-    "@okta/okta-auth-js": "^6.4.0",
-    "@okta/okta-signin-widget": "^6.4.0",
+    "@okta/okta-auth-js": "^6.9.0",
+    "@okta/okta-signin-widget": "^6.9.0",
+    "@types/q": "^1.5.8",
+    "q": "^1.5.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
