--- a/angular.json
+++ b/angular.json
@@ -59,6 +59,14 @@
                   "with": "src/environments/environment.development.ts"
                 }
               ]
+            },
+            "qa":{
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.qa.ts"
+                }
+              ]
             }
           },
           "defaultConfiguration": "production"
@@ -71,6 +79,9 @@
             },
             "development": {
               "browserTarget": "angular-ecommerce:build:development"
+            },
+            "qa": {
+              "browserTarget": "angular-ecommerce:build:qa"
             }
           },
           "defaultConfiguration": "development"
